fix(ww): tweak contrast on some search page texts

--- a/wordweb-app/src/main/resources/scss/eki-markup.scss
+++ b/wordweb-app/src/main/resources/scss/eki-markup.scss
@@ -53,7 +53,7 @@ eki-link, ext-link {
 }
 
 eki-form { 
-  color: #20b900;
+  color: #348338;
 }
 
 eki-shy::before {
