--- a/wordweb-app/src/main/resources/scss/pages/_search.scss
+++ b/wordweb-app/src/main/resources/scss/pages/_search.scss
@@ -224,7 +224,7 @@
     margin: 0 8px 0 0;
 
     &--empty {
-      color: var(--color-cloudy-day);
+      color: var(--color-darker-gray);
     }
   }
 
